# sample-customer-support-agent-on-agentcore

./: .dockerignore  .env.example  .env.runtime.example  .gitignore  Dockerfile  README.md  README_EN.md  demo_server.py  pyproject.toml  requirements.txt
.claude/skills/booking-flow/: SKILL.md
.claude/skills/cancel-flow/: SKILL.md
.claude/skills/faq-flow/: SKILL.md
.claude/skills/reschedule-flow/: SKILL.md
.claude/skills/terminology/: SKILL.md
agent/: __init__.py  agent.py  bedrock_cache_patch.py  observability.py
agent/dispatcher/: __init__.py  agentcore_client.py  config.py  handler.py  models.py  redis_client.py  session.py  side_effects.py
agent/dispatcher/lua/: append_and_increment.lua  pop_messages.lua  try_claim.lua
agent/hooks/: __init__.py  memory_hooks.py  memory_manager.py
agent/prompts/: __init__.py  system_prompt.py
agent/runtime/: __init__.py  __main__.py  entrypoint.py
agent/tools/: __init__.py  account_query.py  booking_operations.py  db.py  knowledge_search.py  mcp_tools.py  timezone_utils.py
docs/: 服务FAQ与操作指南.md  课程与品牌介绍.md
scripts/: batch_test.py  deploy_agentcore.sh  deploy_docker.sh  deploy_elasticache.sh  run_evaluation.py  setup_knowledge_base.py  setup_memory.py  setup_mock_infra.py
